--- a/index.html
+++ b/index.html
@@ -11,26 +11,48 @@
 </head>
 
 <body>
-    <header class="header page-header">
-        <div class="hero-container">
+    <div class="page-grid">
+        <header class="header page-header">
             <figure class="figure figure-image">
-                <img class="hero" src="#" alt="image of flower">
+                <img class="hero" src="images/janmesh-shah-ZlbuFLDZu0k-unsplash.jpg" alt="image of flower">
             </figure>
-        </div>
-        <section class="logo_page">
-            <figure class="figure figure-logo">
-                <img src="#" alt="a logo of odin website">
-            </figure>
-            <h1 class="logo">odin</h1>
-        </section>
-    </header>
-    <main class="main main-page">
-        <!-- <header></header>
-        <form action=""></form> -->
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-    </main>
+            <section class="logo_page">
+                <figure class="figure figure-logo">
+                    <img class="logo" src="images/odin-lined.png" alt="a logo of odin website">
+                </figure>
+                <h1 class="hero-text">odin</h1>
+            </section>
+        </header>
+        <main class="main main-page">
+            <header class="main-header">
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, similique odio voluptates
+                    exercitationem consequuntur corporis harum maxime autem ut eos eum repellendus quasi veniam tempore.
+                    Corporis possimus soluta odit consequuntur.</h2>
+            </header>
+
+            <form action="#" class="form">
+                <fieldset>
+                    <legend>Lets do this!</legend>
+                    <label for="first-name">first name</label>
+                    <input type="text" name="" id="first-name">
+                    <label for="last-name">last name</label>
+                    <input type="text" name="" id="last-name">
+                    <label for="email">email</label>
+                    <input type="email" name="email" id="email">
+                    <label for="phone">phone number</label>
+                    <input type="tell" name="phone" id="phone">
+                    <label for="pass1">password</label>
+                    <input type="password" name="password" id="pass1">
+                    <label for="pass2">confirm password</label>
+                    <input type="password" name="pass-confirm" id="pass2">
+                </fieldset>
+
+            </form>
+
+
+            <div>3</div>
+        </main>
+    </div>
 </body>
 
 </html>
