added style to form

--- a/index.html
+++ b/index.html
@@ -31,20 +31,34 @@
             </header>
 
             <form action="#" class="form">
-                <fieldset>
-                    <legend>Lets do this!</legend>
-                    <label for="first-name">first name</label>
-                    <input type="text" name="" id="first-name">
-                    <label for="last-name">last name</label>
-                    <input type="text" name="" id="last-name">
-                    <label for="email">email</label>
-                    <input type="email" name="email" id="email">
-                    <label for="phone">phone number</label>
-                    <input type="tell" name="phone" id="phone">
-                    <label for="pass1">password</label>
-                    <input type="password" name="password" id="pass1">
-                    <label for="pass2">confirm password</label>
-                    <input type="password" name="pass-confirm" id="pass2">
+                <fieldset class="fieldset">
+                    <legend>
+                        <h2>Lets do this!</h2>
+                    </legend>
+                    <div class="input-wrapper">
+                        <label for="first-name">first name</label>
+                        <input type="text" name="" id="first-name">
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="last-name">last name</label>
+                        <input type="text" name="" id="last-name">
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="email">email</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="phone">phone number</label>
+                        <input type="tell" name="phone" id="phone">
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="pass1">password</label>
+                        <input type="password" name="password" id="pass1">
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="pass2">confirm password</label>
+                        <input type="password" name="pass-confirm" id="pass2">
+                    </div>
                 </fieldset>
 
             </form>
