--- a/index.html
+++ b/index.html
@@ -20,13 +20,22 @@
         <header class="header page-header">
             <figure class="figure figure-image">
                 <img class="hero" src="images/janmesh-shah-ZlbuFLDZu0k-unsplash.jpg" alt="image of flower">
+
             </figure>
             <section class="logo_page">
                 <figure class="figure figure-logo">
                     <img class="logo" src="images/odin-lined.png" alt="a logo of odin website">
                 </figure>
                 <h1 class="hero-text">odin</h1>
+
             </section>
+            <div class="bg-link">
+                <p>Photo by <a class="bg-a"
+                        href="https://unsplash.com/@janmeshah?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Janmesh
+                        Shah</a> on <a class="bg-a"
+                        href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+                </p>
+            </div>
         </header>
         <main class="main main-page">
             <header class="main-header">
